# minecraft_world_rs

./: Cargo.toml  README.md  build.sh  level  nbt.nu
.helix/: config.toml
enumtype-derive/: Cargo.toml
enumtype-derive/src/: lib.rs
src/: de.rs  error.rs  lib.rs  main.rs  nbt_value.rs  pylib.rs  ser.rs  test.rs  test_nbt1  world.rs
testdata/: level.dat.json  level.dat.msgpack
