[package]
name = "minecraft_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
flate2 = "1.0.26"
pyo3 = { version = "0.18.3", features = ["abi3-py37", "extension-module"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[lib]
name = "minecraft_world"
crate-type = ["cdylib", "lib"]
