[package]
name = "minecraft_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
either = "1.15.0"
flate2 = "1.0.26"
pyo3 = { version = "0.28.1", features = ["abi3-py37", "extension-module", "either"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
enumtype-derive = {path = "./enumtype-derive"}
pretty_assertions = "1.4.1"
rmp-serde = "1.3.1"

[lib]
name = "minecraft_world"
crate-type = ["cdylib", "lib"]


[features]
ordered_map = []
default = ["ordered_map"]
